<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Criar Conta"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

        </com.google.android.material.appbar.MaterialToolbar>



        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/edittextEmail"
                style="@style/EditTextTheme"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/edittextSenha"
                style="@style/EditTextTheme"
                android:inputType="textPassword"
                android:hint="@string/hint_edit_password"
                android:layout_marginTop="4dp"
                />


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/buttonRegister"
                style="@style/ButtonTheme"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_fragment"
                app:backgroundTint="@null"
                android:layout_marginTop="16dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                tools:visibility="visible"/>


        </LinearLayout>
    </LinearLayout>

</ScrollView>