<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edittextEmail"
            style="@style/EditTextTheme"
            android:layout_height="48dp"
            android:hint="@string/hint_edit_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_empty"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edittextSenha"
            style="@style/EditTextTheme"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hint_edit_password"
            android:layout_marginTop="4dp"
            />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            style="@style/ButtonTheme"
            android:text="LOGIN"
            app:backgroundTint="@null"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Criar Conta"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btnRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recuperar Conta"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/white"/>
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            tools:visibility="visible"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Aluno: Andriy"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>